--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -35,5 +35,6 @@
     <Style x:Key="{x:Type loading:RecCircleLoading}" TargetType="{x:Type loading:RecCircleLoading}" BasedOn="{StaticResource DefaultRecCircleLoadingStyle}"/>
     <Style x:Key="{x:Type loading:RecColumnLoading}" TargetType="{x:Type loading:RecColumnLoading}" BasedOn="{StaticResource DefaultRecColumnLoadingStyle}"/>
     <Style x:Key="{x:Type loading:RecGridLoading}" TargetType="{x:Type loading:RecGridLoading}" BasedOn="{StaticResource DefaultRecGridLoadingStyle}"/>
-
+    <Style x:Key="{x:Type loading:RaindropLoading}" TargetType="{x:Type loading:RaindropLoading}" BasedOn="{StaticResource RaindropLoadingStyle}"/>
+    
 </ResourceDictionary>
