做文本loading动画时增加字体的宽高测量

--- a/CookPopularControl/Themes/LoadingStyle.xaml
+++ b/CookPopularControl/Themes/LoadingStyle.xaml
@@ -160,6 +160,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Width" Value="200" />
         <Setter Property="FontSize" Value="22" />
+        <Setter Property="CharacterContent" Value="Loading" />
     </Style>
 
 </ResourceDictionary>
