--- a/CookPopularControl/Themes/LoadingStyle.xaml
+++ b/CookPopularControl/Themes/LoadingStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:loading="clr-namespace:CookPopularControl.Controls.Animation.Loading"
+                    xmlns:simpleLoading="clr-namespace:CookPopularControl.Controls.Animation.Loading.SimpleLoadings"
                     xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
 
     <ResourceDictionary.MergedDictionaries>
@@ -141,7 +142,7 @@
     
     
     <!--SimpleLoadingAnimation-->
-    <Style x:Key="{x:Type loading:LoadingBase}" TargetType="{x:Type loading:LoadingBase}">
+    <Style x:Key="{x:Type simpleLoading:LoadingBase}" TargetType="{x:Type simpleLoading:LoadingBase}">
         <Setter Property="Width" Value="100" />
         <Setter Property="Height" Value="100" />
         <Setter Property="Foreground" Value="{StaticResource PrimaryColorTheme}" />
@@ -149,14 +150,16 @@
         <Setter Property="RunSpeed" Value="1" />
         <Setter Property="Duration" Value="0:0:4" />
     </Style>
-    <Style x:Key="RaindropLoadingStyle" TargetType="{x:Type loading:RaindropLoading}" BasedOn="{StaticResource {x:Type loading:LoadingBase}}">
+
+    <Style x:Key="RaindropLoadingStyle" TargetType="{x:Type simpleLoading:RaindropLoading}" BasedOn="{StaticResource {x:Type simpleLoading:LoadingBase}}">
         <Setter Property="RaindropStroke" Value="Orange" />
         <Setter Property="RaindropStrokeThickness" Value="3" />
     </Style>
-    <Style x:Key="CharacterLoadingStyle" TargetType="{x:Type loading:CharacterLoading}" BasedOn="{StaticResource {x:Type loading:LoadingBase}}">
+
+    <Style x:Key="CharacterLoadingStyle" TargetType="{x:Type simpleLoading:CharacterLoading}" BasedOn="{StaticResource {x:Type simpleLoading:LoadingBase}}">
         <Setter Property="DotDiameter" Value="14" />
         <Setter Property="DotCount" Value="3" />
-        <Setter Property="Duration" Value="0:0:0.5" />
+        <Setter Property="Duration" Value="0:0:0.6" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Width" Value="200" />
         <Setter Property="FontSize" Value="22" />
