--- a/TestDemo/Demos/LoadingDemo.xaml
+++ b/TestDemo/Demos/LoadingDemo.xaml
@@ -4,36 +4,45 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d"
+             d:DesignHeight="800" d:DesignWidth="1000">
 
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Background="Orange">
-        <WrapPanel Margin="0,20,0,0">
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
+        <WrapPanel Margin="0,20,0,0" HorizontalAlignment="Center">
             <pc:DotCircleLoading Style="{StaticResource DefaultDotCircleLoadingStyle}" Margin="20,0"/>
-            <pc:DotCircleLoading Style="{StaticResource DotFullCircleLoadingStyle}" Margin="20,0"/>
-            <pc:DotCircleLoading Style="{StaticResource DotCircleLoadingRunAsConstantStyle}" Margin="20,0" IsDotRunning="False"/>
-            <pc:DotCircleLoading Style="{StaticResource DotFullCircleLoadingRunAsConstantStyle}" Margin="20,0" IsDotRunning="True"/>
+            <pc:DotCircleLoading Style="{StaticResource DotFullCircleLoadingStyle}" Margin="20,0" />
+            <pc:DotCircleLoading Style="{StaticResource DotCircleLoadingRunAsConstantStyle}" Margin="20,0" />
+            <pc:DotCircleLoading Style="{StaticResource DotFullCircleLoadingRunAsConstantStyle}" Margin="20,0" />
+            <pc:DotOpacityLoading Style="{StaticResource DefaultDotOpacityLoadingStyle}" Margin="20,0"/>
+            <pc:RaindropLoading Style="{StaticResource RaindropLoadingStyle}" Margin="20,0"/>
         </WrapPanel>
-        <StackPanel Width="480" Margin="0,20,0,0">
-            <pc:DotLineLoading Width="480" Style="{StaticResource DefaultDotLineLoadingStyle}"/>
-            <pc:DotLineLoading Width="480" Style="{StaticResource DotLineLoadingRunAsContantStyle}" Margin="0,20"/>
+        <StackPanel Margin="0,20,0,0" HorizontalAlignment="Center">
+            <pc:DotLineLoading Width="900" Style="{StaticResource DefaultDotLineLoadingStyle}" />
+            <pc:DotLineLoading Width="900" Style="{StaticResource DotLineLoadingRunAsContantStyle}" Margin="0,20" />
         </StackPanel>
-        <WrapPanel Margin="0,20,0,0">
+        <WrapPanel Margin="0,20,0,0" HorizontalAlignment="Center">
             <pc:DotPendulumLoading Style="{StaticResource DefaultDotPendulumLoadingStyle}" Margin="20,0" />
             <pc:DotPendulumLoading Style="{StaticResource DefaultDotPendulumLoadingStyle}" Margin="20,0" 
                                    pc:DotPendulumLoading.PendulumSwingAngle="0"
-                                   pc:DotPendulumLoading.PendulumSlipDistance="50"/>
-        </WrapPanel>
-        <WrapPanel Margin="0,20,0,0">
+                                   pc:DotPendulumLoading.PendulumSlipDistance="50" />
             <pc:DotPendulumLoading Style="{StaticResource DotPendulumLoadingRunAsContantStyle}" Margin="20,0" />
             <pc:DotPendulumLoading Style="{StaticResource DotPendulumLoadingRunAsContantStyle}" Margin="20,0" 
-                                   pc:DotPendulumLoading.PendulumSwingAngle="0"
-                                   pc:DotPendulumLoading.PendulumSlipDistance="50"/>
+                                   pc:DotPendulumLoading.PendulumSwingAngle="0" 
+                                   pc:DotPendulumLoading.PendulumSlipDistance="50" />
         </WrapPanel>
         <WrapPanel Margin="0,20,0,0" HorizontalAlignment="Center">
-            <pc:RecCircleLoading Style="{StaticResource DefaultRecCircleLoadingStyle}" />
-            <pc:RecCircleLoading Style="{StaticResource FullOpacityRecCircleLoadingStyle}" Margin="20,0" />
-            <pc:RecColumnLoading Style="{StaticResource DefaultRecColumnLoadingStyle}" IsRecRunning="True"/>
+            <pc:RecCircleLoading Style="{StaticResource DefaultRecCircleLoadingStyle}" Margin="10,0"/>
+            <pc:RecCircleLoading Style="{StaticResource OpacityCycleRecCircleLoadingStyle}" Margin="10,0" />
+            <pc:RecCircleLoading Style="{StaticResource FullOpacityRecCircleLoadingStyle}" Margin="10,0"/>
+            <pc:CharacterLoading Style="{StaticResource CharacterLoadingStyle}" Margin="10,0"/>
+            <pc:BraceletLoading Style="{StaticResource BraceletLoadingStyle}" Margin="10,0"/>
+            <pc:PlaneLoading Style="{StaticResource PlaneLoadingStyle}" Margin="10,0" />
+        </WrapPanel>
+        <WrapPanel Margin="0,20,0,0" HorizontalAlignment="Center">
+            <pc:RecColumnLoading Style="{StaticResource DefaultRecColumnLoadingStyle}" Margin="10,0"/>
+            <pc:RecColumnLoading Style="{StaticResource RecColumnLoadingStyle1}" Margin="10,0"/>
+            <pc:RecColumnLoading Style="{StaticResource RecColumnLoadingStyle2}" Margin="10,0"/>
+            <pc:RecGridLoading Style="{StaticResource DefaultRecGridLoadingStyle}" Margin="10,0" IsRecRunning="True"/>
         </WrapPanel>
     </StackPanel>
 
