--- a/CookPopularControl/Themes/AnimationPathStyle.xaml
+++ b/CookPopularControl/Themes/AnimationPathStyle.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:gifbox="clr-namespace:CookPopularControl.Controls.Animation">
+                    xmlns:animation="clr-namespace:CookPopularControl.Controls.Animation">
 
-    <Style x:Key="DefaultGifBoxStyle" TargetType="{x:Type gifbox:GifBox}">
+    <Style x:Key="DefaultGifBoxStyle" TargetType="{x:Type animation:AnimationPath}">
         <Setter Property="Stroke" Value="{DynamicResource PrimaryColorTheme}" />
         <Setter Property="StrokeThickness" Value="{StaticResource Double20Value}" />
     </Style>
