--- a/CookPopularControl/Backcolors/DefaultPopularColor.xaml
+++ b/CookPopularControl/Backcolors/DefaultPopularColor.xaml
@@ -9,6 +9,7 @@
     <!--#FF9C8844-->
     <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="	#2E80FF"/>
     <SolidColorBrush x:Key="ButtonBasePressBackground" Color="#4169E1"/>
+    <SolidColorBrush x:Key="BorderBrushColor" Color="#8B008B"/>
 
     <SolidColorBrush x:Key="BlockColor" Color="#664A4A4A"/>
     <LinearGradientBrush x:Key="LinearTheme" StartPoint="0,0" EndPoint="1,1">
