--- a/TestDemo/Demos/AnimationDemo.xaml
+++ b/TestDemo/Demos/AnimationDemo.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="TestDemo.Demos.AnimationDemo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -38,9 +39,9 @@
                     </EventTrigger>
                 </Canvas.Triggers>
                 <Path Data="{StaticResource path}" Stroke="Black" StrokeThickness="1" />
-                <Ellipse Fill="#eee" Width="20" Height="20" >
+                <Ellipse Fill="#f00" Width="20" Height="20" >
                     <Ellipse.RenderTransform>
-                        <MatrixTransform x:Name="ButtonMatrixTransform" />
+                        <MatrixTransform x:Name="ButtonMatrixTransform"/>
                     </Ellipse.RenderTransform>
                 </Ellipse>
             </Canvas>
@@ -83,7 +84,7 @@
 
                 <Path Data="{StaticResource path}" Stroke="Black" StrokeThickness="1" />
 
-                <Path Fill="#FF0000">
+                <Path Fill="#eee">
                     <Path.Data>
                         <EllipseGeometry x:Name="ellipses" Center="5,5" RadiusX="12" RadiusY="12"/>
                     </Path.Data>
@@ -116,6 +117,40 @@
                         <EllipseGeometry x:Name="ellipse" Center="5,5" RadiusX="12" RadiusY="12"/>
                     </Path.Data>
                 </Path>
+            </Canvas>
+
+            <Canvas Width="400" Height="400">
+
+                <!-- The Button that is animated across the screen by animating
+         the MatrixTransform applied to the button. -->
+                <Button MinWidth="100" Content="A Button">
+                    <Button.RenderTransform>
+                        <MatrixTransform x:Name="ButtonMatrixTransform1">
+                            <MatrixTransform.Matrix >
+                                <Matrix />
+                            </MatrixTransform.Matrix>
+                        </MatrixTransform>
+                    </Button.RenderTransform>
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.Loaded">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <MatrixAnimationUsingPath
+                                      Storyboard.TargetName="ButtonMatrixTransform1"
+                                      Storyboard.TargetProperty="Matrix"
+                                      DoesRotateWithTangent="True"
+                                      Duration="0:0:5" 
+                                      RepeatBehavior="Forever" >
+                                        <MatrixAnimationUsingPath.PathGeometry>
+                                            <PathGeometry Figures="M 10,100 C 35,0 135,0 160,100 180,190 285,200 310,100" 
+                                                          PresentationOptions:Freeze="True" />
+                                        </MatrixAnimationUsingPath.PathGeometry>
+                                    </MatrixAnimationUsingPath>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
             </Canvas>
 
         </StackPanel>
